--- a/.env.example
+++ b/.env.example
@@ -36,7 +36,7 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 
-CACHE_STORE=database
+CACHE_STORE=file
 CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
@@ -62,3 +62,12 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+VITE_LIGHT_THEME="aura-light-blue"
+VITE_DARK_THEME="aura-dark-blue"
+
+WWWGROUP=1000
+WWWUSER=1000
+
+APP_PORT=8000
+VITE_PORT=5173
+FORWARD_DB_PORT=5432
