--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
         "@inertiajs/vue3": "^2.0.0",
         "@primevue/auto-import-resolver": "^4.2.2",
         "@primevue/themes": "^4.2.2",
+        "@tailwindcss/postcss": "^4.0.0",
         "@types/lodash-es": "^4.17.12",
         "@typescript-eslint/eslint-plugin": "^8.19.1",
         "@typescript-eslint/parser": "^8.19.1",
         "@vitejs/plugin-vue": "^5.0.0",
         "@vueuse/core": "^12.4.0",
-        "autoprefixer": "^10.4.19",
         "axios": "^1.6.4",
         "eslint": "^9.18.0",
         "eslint-config-prettier": "^9.1.0",
@@ -29,7 +29,7 @@
         "postcss-import": "^16.1.0",
         "primeicons": "^7.0.0",
         "primevue": "^4.2.2",
-        "tailwindcss": "^3.4.4",
+        "tailwindcss": "^4.0.0",
         "tailwindcss-primeui": "^0.3.2",
         "typescript": "^5.7.3",
         "typescript-eslint": "^8.19.1",
