--- a/.env.example
+++ b/.env.example
@@ -19,12 +19,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=sqlite
+#DB_HOST=
+#DB_PORT=
+#DB_DATABASE=
+#DB_USERNAME=
+#DB_PASSWORD=
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
@@ -68,4 +68,4 @@ WWWUSER=1000
 
 APP_PORT=8000
 VITE_PORT=5173
-FORWARD_DB_PORT=3306
+FORWARD_DB_PORT=
