--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,8 +9,8 @@ services:
         GROUP_ID: '${GROUP_ID:-1000}'
     extra_hosts:
       - 'host.docker.internal:host-gateway'
-    ports:
-      - '${VITE_PORT:-5173}:${VITE_PORT:-5173}' # Not necessarily required for dev containers (auto port forwarding)
+    #ports:
+      #- '${VITE_PORT:-5173}:${VITE_PORT:-5173}' # Not necessarily required for dev containers (auto port forwarding)
     environment:
       PHP_OPCACHE_ENABLE: '1'
       PHP_OPCACHE_REVALIDATE_FREQ: '0'
