--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,8 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost:8000
+APP_DOMAIN=localhost:8000
+APP_URL="http://${APP_DOMAIN}"
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -22,6 +23,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=sqlite
 #DB_HOST=
 #DB_PORT=
+#DB_FORWARD_PORT=
 #DB_DATABASE=
 #DB_USERNAME=
 #DB_PASSWORD=
@@ -62,10 +64,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-
-USER_ID=1000
-GROUP_ID=1000
-#XDEBUG_MODE=debug
-
 VITE_PORT=5173
-FORWARD_DB_PORT=
+
+#USER_ID=1000
+#GROUP_ID=1000
+#XDEBUG_MODE=debug
